<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_layout_bg" >

    <RelativeLayout
        android:id="@+id/personal_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/android_title_bg" >

        <TextView
            android:id="@+id/find_pass_page2_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:onClick="onClick"
             android:text="@string/breath_page_back"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"  />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/set_new_password"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <LinearLayout 
   			android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_below="@id/personal_top_layout"
    		android:orientation="vertical" >

       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/new_password_prompt"
            android:textColor="@color/black"
            android:textSize="15.0sp" />
    
     <Button
         android:id="@+id/submit_relation"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="14dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/android_title_bg"
         android:gravity="center"
         android:text="@string/next_step_success"
         android:textColor="#fff"
         android:textSize="18sp" />
     
    </LinearLayout>

</RelativeLayout>