<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_layout_bg" >

    <RelativeLayout
        android:id="@+id/personal_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/android_title_bg" >

        <TextView
            android:id="@+id/find_pass_page2_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:onClick="onClick"
             android:text="@string/breath_page_back"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"  />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/set_new_password"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/personal_top_layout"
    android:orientation="vertical" >
    
      <LinearLayout
         android:id="@+id/first_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout"
        android:layout_marginTop="10.0dip"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:padding="10sp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:text="@string/user_account"
            android:textColor="@color/black"
            android:textSize="15.0sp" />
          <EditText
                        android:id="@+id/user_account"
                        android:layout_width="163dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" />
    </LinearLayout>
    
       <LinearLayout
         android:id="@+id/second_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout"
        android:layout_marginTop="10.0dip"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:padding="10sp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="15.0sp" />
          <EditText
                        android:id="@+id/new_password"
                        android:layout_width="163dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="40"
                        android:inputType="textPassword"
                        android:focusableInTouchMode="true"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" />
    </LinearLayout>
    
     <LinearLayout
         android:id="@+id/third_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout"
        android:layout_marginTop="10.0dip"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:padding="10sp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:text="@string/confirm_new_password"
            android:textColor="@color/black"
            android:textSize="15.0sp" />
          <EditText
                        android:id="@+id/confirm_new_password"
                        android:layout_width="163dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="40"
                        android:inputType="textPassword"
                        android:focusableInTouchMode="true"
                        android:padding="5.0dip"
                        android:paddingRight="30dp"
                        android:textColor="#ff3b3b3b"
                        android:textSize="16.0sp" />
    </LinearLayout>
    
     <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/more_activity_item_selector_bottom_corners"
                    android:orientation="horizontal"
                    android:padding="10sp" >

                    <TextView
                        android:id="@+id/tv_user_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_user_type"
                        android:textColor="@android:color/black"
                        android:textSize="18.0sp" />
                    
                    <RadioGroup 
	    			android:id="@+id/rg_user_type"
	    			android:layout_width="fill_parent"
	    			android:layout_height="wrap_content"
	    			android:orientation="horizontal"
                     android:paddingRight="30dp"
	    			android:checkedButton="@+id/Oldman">
	    			<RadioButton 
	        		android:id="@+id/Oldman"
	        		android:textColor="#ff3b3b3b"
	        		 android:textSize="16.0sp"
	       			 android:text="@string/user_type_Oldman"/>
	   			 	<RadioButton 
	       			 android:id="@+id/child"
	       			 android:layout_marginLeft="30dp"
	       			 android:textColor="#ff3b3b3b"
	       			  android:textSize="16.0sp"
	       			 android:text="@string/user_type_child"/>
					</RadioGroup>
                      
                </LinearLayout>
    
     <Button
         android:id="@+id/submit_relation"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="14dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/android_title_bg"
         android:gravity="center"
         android:text="@string/next_step"
         android:textColor="#fff"
         android:textSize="18sp" />
     
    </LinearLayout>

</RelativeLayout>